[tool.poetry]
name = "duplicates-remove"
version = "0.1.0"
description = ""
authors = ["Anderson Damasceno <anderdam@gmail.com>"]
readme = "README.md"
packages = [{include = "duplicates_remove"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
pyspark = "^3.5.0"
setuptools = "^69.0.1"
black = "^23.11.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
